<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="Create a Shoveling Request"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/streetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Street Address"
            android:theme="@style/MyEditTextStyle2"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPostalAddress"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/error_message_streetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextStyle2"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="City"
            android:inputType="text" />

        <TextView
            android:id="@+id/error_message_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/postalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextStyle2"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Postal Code"
            android:inputType="text"/>

        <TextView
            android:id="@+id/error_message_postCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextStyle2"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="Phone Number"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/error_message_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/requestDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditTextStyle2"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="Date"
                android:inputType="date" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnDateTime"
                android:text="Select Date"
                android:textColor="#0000FF"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/error_message_requestDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/requestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditTextStyle2"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="Time"
                android:inputType="time"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnDateTime"
                android:text="Select Time"
                android:textColor="#0000FF"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/error_message_requestTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="backButton"
                android:text="back"
                android:textColor="#0000FF"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/postButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="postRequest"
                android:text="post"
                android:textColor="#0000FF"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>